# VisionScore

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: post-change.md
.claude/scripts/: post-change-hook.sh
.github/workflows/: ci.yml
docs/: api.md  scoring_methodology.md
examples/: demo.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: routes.ts
frontend/src/imports/: vision-score-dashboard.tsx
frontend/src/styles/: fonts.css
scripts/: download_models.py
sql/: README.md  phase9_8_mobile_api.sql  schema.sql
src/visionscore/: cli.py  config.py  models.py
src/visionscore/analyzers/: __init__.py  aesthetic.py  ai_feedback.py  base.py  composition.py  suggestions.py  technical.py
src/visionscore/api/: __init__.py  app.py  auth.py  rate_limiter.py  routes.py  schemas.py  sse.py  supabase_client.py  thumbnails.py  webhooks.py
src/visionscore/pipeline/: __init__.py  auto_edit.py  loader.py  metadata.py  (+1 more)
tests/: conftest.py  test_aesthetic.py  test_aggregator.py  test_ai_feedback.py  test_api.py  test_auth.py  test_auto_edit.py  test_batch.py  test_cli.py  test_cli_report.py  test_comparison.py  test_composition.py  test_config.py  test_gallery.py  test_grading.py  test_gzip.py  test_instagram_plugin.py  test_loader.py  test_metadata.py  test_orchestrator.py  test_output.py  test_plugin_registry.py  test_rate_limiter.py  test_sse.py  test_suggestions.py  test_supabase_client.py  test_technical.py  test_thumbnails.py  test_training.py  test_webhooks.py
(+30 files in other folders)
